crates/rooch-integration-test-runner/tests/cases/private_generics_indirect_call.exp
processed 3 tasks

task 1 'publish'. lines 3-11:
status EXECUTED

task 2 'publish'. lines 13-38:
Error: error: resource type "KeyStruct" in function "0x2::context::new_object" not defined in current module or not allowed
   ┌─ /tmp/tempfile:31:22
   │
31 │         let object = context::new_object(ctx, test0::new_key_struct(100));
   │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "KeyStruct" in function "0x2::object::remove" not defined in current module or not allowed
   ┌─ /tmp/tempfile:32:27
   │
32 │         let _key_struct = object::remove(object);
   │                           ^^^^^^^^^^^^^^^^^^^^^^

error: resource type "KeyStruct" in function "0x42::test::publish_foo" not defined in current module or not allowed
   ┌─ /tmp/tempfile:28:9
   │
28 │         publish_foo<KeyStruct>(ctx, s)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


